--- a/style.css
+++ b/style.css
@@ -24,13 +24,14 @@ body {
 .container {
     width: 800px;
     max-width: 80%;
+    font-weight: bold;
     background-color: white;
     border-radius: 5px;
     padding: 10px;
     box-shadow: 0 0 10px 2px;
-
-
 }
+    
+
 
 .btn-grid {
     display: grid;
@@ -42,11 +43,11 @@ body {
 
 .btn {
     --hue: var(--hue-neutral);
-    border: 1px solid hsl(var(--hue), 100%, 30%);
-    background-color: hsl(var(--hue), 100%, 50%);
+    border: black;
+    background-color:rgb(102, 226, 226);
     border-radius: 5px;
     padding: 5px 10px;
-    color: gray;
+    color:grey;
     outline: none;
 }
 
@@ -54,3 +55,28 @@ body {
     border-color: blue;
 }
 
+.btn.correct {
+    --hue: var(--hue-correct);
+    color: black;
+}
+
+.btn.wrong {
+    --hue: var(--hue-wrong);    
+
+}
+
+.start-btn, .next-btn {
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 10px 20px;
+}
+
+.controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hide {
+    display: none;
+}
