--- a/style.css
+++ b/style.css
@@ -14,13 +14,18 @@ body {
     padding: 0;
     margin: 0;
     background-color: lightblue;
-    display: flex;
     width: 100vw;
     height: 100vh;
-    justify-content: center;
     align-items: center;
 }
 
+.jumbotron {
+    font-weight: bolder;
+    font-style: italic;
+    justify-content: center;
+    text-align: center;
+    border-radius: 2px;
+}
 .container {
     width: 800px;
     max-width: 80%;
@@ -29,10 +34,8 @@ body {
     border-radius: 5px;
     padding: 10px;
     box-shadow: 0 0 10px 2px;
+    justify-content: center;
 }
-    
-
-
 .btn-grid {
     display: grid;
     grid-template-columns: repeat(2, auto);
@@ -40,6 +43,7 @@ body {
     margin: 20px 0;
 
 }
+    
 
 .btn {
     --hue: var(--hue-neutral);
