--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 body {
     padding: 0;
     margin: 0;
-    background-color: lightblue;
+    background-color: gray;
     width: 100vw;
     height: 100vh;
     align-items: center;
@@ -48,7 +48,7 @@ body {
 .btn {
     --hue: var(--hue-neutral);
     border: black;
-    background-color:rgb(102, 226, 226);
+    background-color: lightblue;
     border-radius: 5px;
     padding: 5px 10px;
     color:grey;
