--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 body {
     padding: 0;
     margin: 0;
-    background-color: gray;
+    background-color: lightgray;
     width: 100vw;
     height: 100vh;
     align-items: center;
@@ -84,4 +84,11 @@ body {
 
 .hide {
     display: none;
+}
+
+#timer {
+    font-size: 1.5rem;
+    font-weight: bolder;
+    color: red;
+    text-align: center;
 }
