--- a/style.css
+++ b/style.css
@@ -86,3 +86,9 @@ body {
     display: none;
 }
 
+#timer {
+    font-size: 1.5rem;
+    font-weight: bolder;
+    color: red;
+    text-align: center;
+}
