--- a/style.css
+++ b/style.css
@@ -1,94 +1,107 @@
-*, *::before, *::after {
-    box-sizing: border-box;
-    font-family: sans-serif;
-
-}
-
-:root {
-    --hue-neutral: white;
-    --hue-wrong: red;
-    --hue-correct: green;
+.clearfix {
+    overflow: auto;
 }
 
 body {
-    padding: 0;
-    margin: 0;
-    background-color: lightgray;
-    width: 100vw;
-    height: 100vh;
-    align-items: center;
+    background-color: rgb(201, 199, 199);
 }
 
-.jumbotron {
-    font-weight: bolder;
-    font-style: italic;
-    justify-content: center;
-    text-align: center;
-    border-radius: 2px;
+header {
+    margin: 20px;
+    display: block;
 }
-.container {
-    width: 800px;
-    max-width: 80%;
-    font-weight: bold;
-    background-color: white;
-    border-radius: 5px;
+
+a {
+    color: rgb(100, 98, 98);
+    font-family: sans-serif;
+    font-size: large;
+    width: 50%;
+    text-decoration: none;
+    float: left;
     padding: 10px;
-    box-shadow: 0 0 10px 2px;
-    justify-content: center;
-}
-.btn-grid {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    gap: 10px;
-    margin: 20px 0;
-
-}
-    
-
-.btn {
-    --hue: var(--hue-neutral);
-    border: black;
-    background-color: lightblue;
-    border-radius: 5px;
-    padding: 5px 10px;
-    color:grey;
-    outline: none;
-}
-
-.btn:hoover {
-    border-color: blue;
-}
-
-.btn.correct {
-    --hue: var(--hue-correct);
-    color: green;
-
-}
-
-.btn.wrong {
-    --hue: var(--hue-wrong);    
-    color: red;
-}
-
-.start-btn, .next-btn {
-    font-size: 1.5rem;
-    font-weight: bold;
-    padding: 10px 20px;
-}
-
-.controls {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.hide {
-    display: none;
 }
 
 #timer {
-    font-size: 1.5rem;
-    font-weight: bolder;
-    color: red;
+    color: black;
+    font-family: sans-serif;
+    font-size: large;
+    text-align: right;
+    width: 50%;
+    float: right;
+    padding: 10px;
+}
+
+main {
     text-align: center;
+}
+
+#welcomeId {
+    display: inline-block;
+}
+
+#quizId {
+    display: none;
+}
+
+#endQuiz {
+    display: none;
+}
+
+#highScoresList {
+    background-color: lightgray;
+}
+
+#resultId {
+    display: none;
+}
+
+.result {
+    font-style: italic;
+    font-weight: 300;
+}
+
+#correct {
+    display: none;
+}
+
+#wrong {
+    display: none;
+}
+
+#initial-count {
+    display: inline-block;
+}
+
+#initial-list {
+    display: inline-block;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    background-color: white;
+}
+
+li {
+    height: 40px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+    background-color: rgb(14, 108, 170);
+    color: black;
+    font-size: 20px;
+    line-height: 1.5;
+}
+
+.btn:focus {
+    outline: none;
+}
+
+.answer:focus {
+    outline: none;
+
+}
+
+.answer:active {
+    outline: none;
 }
