--- a/style.css
+++ b/style.css
@@ -39,6 +39,23 @@ main {
     display: inline-block;
 }
 
+.container {
+    width: 800px;
+    max-width: 80%;
+    background-color: white;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 0 10px 2px;
+}
+
+#btn-grid {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    justify-content: center;
+    gap: 10px;
+    margin: 20px 0;
+}
+
 #quizId {
     display: none;
 }
