--- a/style.css
+++ b/style.css
@@ -80,9 +80,14 @@ main {
     
 }
 
+#highScores {
+    margin-top: 30px;
+}
+
 #highScoresList {
     background-color: lightgray;
 }
+
 
 #resultId {
     display: none;
